force-app/main/default/objects/nFORCE__Screen__c/nFORCE__Screen__c.object-meta.xml
<CustomObject>
    <label>Screen</label>
    <nameField>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>