force-app/main/default/objects/nFORCE__Screen__c/fields/nFORCE__Disable_Print__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. The admin manually populates this field. It controls whether export to PDF or the brower&apos;s print option is used. When enabled, export to PDF is used when printing a credit memo. When disabled, the browser&apos;s print is used when printing a credit memo. By default, this is disabled. It is recommended that this be enabled.</description>
    <label>Disable Print</label>
    <type>Checkbox</type>
</CustomField>