force-app/main/default/objects/nFORCE__Screen__c/fields/nFORCE__Disable_Read_Only_View__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_Read_Only_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this field will hide the cancel button where it is configured and it will not display to the user in the nCino UI. By default, this is false.</description>
    <inlineHelpText>Select to hide the cancel button.</inlineHelpText>
    <label>Disable Read-Only View</label>
    <type>Checkbox</type>
</CustomField>