force-app/main/default/objects/nFORCE__Screen__c/fields/nFORCE__Show_Link_To_Context_Object__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Show_Link_To_Context_Object__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. The default value is true. When the value is set to true, the credit memo will diplay a link to return to the context object.</description>
    <label>Show Context Object Name</label>
    <type>Checkbox</type>
</CustomField>